version 3.0.4
  - added playback progress sync for episodes
  - fixed problem when external addon is providing video_ids but no year
  - fixed problem with multi-part episodes sometimes not being recognized
  - updated language files from Transifex

version 3.0.3
  - bugfix for keyboard not showing up when trying to type in the pin dialog
  - properly handle any ids combination when scrobbling is off for ratings
  - updated language files from Transifex

version 3.0.2
  - fancy PIN auth dialog (by tknorris) and design (by piers)
  - new design for context menu (by piers)
  - skinners be aware, we renamed the dialogs, so you will need to rename yours too
  - improved the dialogs so they are easier to skin
  - you no longer need to scrobble to get a rating dialog
  - created context menu addons for Kodi 15 (Isengard) - you need to install them on their own
  - added an 'add to watchlist' button
  - various fixes for manual rating and watched
  - fixed some notifications not causing errors
  - added id scrobbling via ids window property
  - updated language files from Transifex

version 3.0.1
  - moved to PIN login, you will need to reenter your credentials. It's more secure and users with social logins (e.g. g+ or fb) can now login too!
  - readded manual ratings for movies/shows/episodes (by tknorris)
  - implemented manual ratings for seasons (by tknorris)
  - readded manual ratings for movies/shows/seasons/episodes
  - readded the Trakt contextmenu
  - multipart episodes now show a rating dialog for each episode, when playback is finished
  - use kodi proxy to send requests to trakt
  - updated transifex translations

version 3.0.0
  - new Trakt branded rating dialog (by Piers)
  - ported to Trakt.tv api v2 (using trakt.py by fuzeman)
  - added playback progress sync for movies
  - renamed everything from xbmc to kodi
  - more languages supported
  - send collected date from kodi to Trakt
  - send watched date from kodi to Trakt