@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.trakt" name="Trakt" version="3.0.4~beta1" provider-name="Trakt.tv, Razze">
+<addon id="script.trakt" name="Trakt" version="3.0.4~beta2" provider-name="Trakt.tv, Razze">
 	<requires>
 		<import addon="xbmc.python" version="2.14.0"/>
 		<import addon="script.module.simplejson" version="3.3.0"/>
