@@ -2,6 +2,7 @@ version 3.0.4
   - added playback progress sync for episodes
   - fixed problem when external addon is providing video_ids but no year
   - fixed problem with multi-part episodes sometimes not being recognized
+  - added fallback for dates outside of the unix timespan - they will now fall back to the current date/time
   - updated language files from Transifex
 
 version 3.0.3
